# gstgzdec

./: README.md  meson.build
.github/workflows/: run_tests.yml
gst-plugin/: meson.build
gst-plugin/src/: gstgzdec.c  gstgzdec.h  tests.c
